--- a/style.css
+++ b/style.css
@@ -88,3 +88,9 @@
 .copyright p{
     text-align: center;
 }
+
+.sign-in-box{
+    background-color: #fceae8;
+    height: 500px;
+    border-radius: 10px;
+}
