signin, signupm, cart added

--- a/style.css
+++ b/style.css
@@ -94,3 +94,9 @@
     height: 500px;
     border-radius: 10px;
 }
+
+.sign-up-box{
+    background-color: #fceae8;
+    height: 500px;
+    border-radius: 10px;
+}
